syntax = "proto2";

package steve.proto.msg;

import "common.proto";

// LoginReq 登录请求
message LoginReq {
    // user_name 用户名
    optional string user_name = 1;
}


// LoginRsp 登录回复
message LoginRsp {
    // result 登录结果
    optional ErrorCode result = 1;

    // user_id 用户 ID
    optional uint64 user_id = 2;
}

